--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.5.2
 atomicwrites==1.4.0
 attrs==21.4.0
+certifi==2022.6.15
+charset-normalizer==2.0.12
 colorama==0.4.4
 Django==3.0
 entrypoints==0.3
 flake8==3.7.0
+gunicorn==20.1.0
+idna==3.3
 iniconfig==1.1.1
 mccabe==0.6.1
 packaging==21.3
@@ -15,7 +19,12 @@ pyflakes==2.1.1
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-django==3.9.0
+python-dateutil==1.5
 pytz==2022.1
+pywin32==227
+requests==2.28.0
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
+urllib3==1.26.9
+websocket-client==1.3.2
