--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ attrs==21.4.0
 certifi==2022.6.15
 charset-normalizer==2.0.12
 colorama==0.4.4
+dj-database-url==0.5.0
 Django==3.0
+django-heroku==0.3.1
 entrypoints==0.3
 flake8==3.7.0
 gunicorn==20.1.0
@@ -13,6 +15,8 @@ iniconfig==1.1.1
 mccabe==0.6.1
 packaging==21.3
 pluggy==1.0.0
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 py==1.11.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
@@ -28,3 +32,4 @@ sqlparse==0.4.2
 tomli==2.0.1
 urllib3==1.26.9
 websocket-client==1.3.2
+whitenoise==6.2.0
