correction config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,9 @@ orbs:
     docker: circleci/docker@1.5.0
 
 jobs:
-    build-and-test: 
-        
+
+    build-and-test:
+        executor: python/default
         steps:
             - checkout
             - python/install-packages:
