--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,8 @@ jobs:
             - run: 
                 name: build image
                 command: |
-                    docker build -t oussamaabid82/letting:latest
-                    docker run -p 8000:8000 oussamaabid82/letting:latest .
+                    docker build -t letting:latest .
+                    docker run -p 8000:8000 oussamaabid82/letting:latest
             
             - run:
                 # Pousse l'image Docker vers Docker Hub. 
