--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             - run: 
                 name: build image
                 command: |
-                    docker build -t letting:latest .
+                    docker build -t letting .
                     docker run -p 8000:8000 oussamaabid82/letting:latest
             
             - run:
