--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
                 docker_layer_caching: true
 
             - run: 
-                name: build image
+                name: build Docker image
                 command: |
                     docker build -t letting .
                     docker run -p 8000:8000 oussamaabid82/letting:latest
