--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 orbs:
     python: circleci/python@1.5.0
     docker: circleci/docker@1.5.0
+    heroku: circleci/heroku@1.2.6
 
 jobs:
 
