--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,9 +40,8 @@ jobs:
             - run: 
                 name: build Docker image
                 command: |
-                    docker build -t $DOCKER_LOGIN/$IMAGE_NAME:latest .
-                    echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin
-                    docker push $DOCKER_LOGIN/$IMAGE_NAME:latest .
+                    docker build -t oussamaabid82/lettings:latest
+                    docker push oussamaabid82/lettings:latest
             
             - run:
                 # Pousse l'image Docker vers Docker Hub. 
