--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             - run: 
                 name: build Docker image
                 command: |
-                    docker build -t oussamaabid82/lettings:latest
+                    docker build -t oussamaabid82/lettings:latest .
                     docker push oussamaabid82/lettings:latest
             
             - run:
