--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,13 +41,13 @@ jobs:
                 name: build Docker image
                 command: |
                     docker build -t oussamaabid82/lettings:latest .
-                    docker push oussamaabid82/lettings:latest
+                    docker push oussamaabid82/lettings:latest .
             
             - run:
                 # Pousse l'image Docker vers Docker Hub. 
                 name: Push to Docker Hub
                 command: |
-                    docker login docker.io
+                    docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
                     docker tag oussamaabid82/lettings:latest oussamaabid82/letting:$CIRCLE_SHA1
                     docker push oussamaabid82/letting:$CIRCLE_SHA1
 
