--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             - run: 
                 name: build Docker image
                 command: |
-                    docker build -t lettings:latest .
+                    docker build -t letting:latest .
                     docker push letting:latest
             
             - run:
