--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,8 @@ jobs:
             - run: 
                 name: build Docker image
                 command: |
-                    docker build -t letting:latest .
-                    docker push letting:latest
+                    docker build -t oussamaabid82/lettings:latest .
+                    docker push oussamaabid82/lettings:latest
             
             - run:
                 # Pousse l'image Docker vers Docker Hub. 
