--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
                 name: build Docker image
                 command: |
                     docker build -t oussamaabid82/lettings:latest .
+                    docker push oussamaabid82/lettings:latest
             
             - run:
                 # Pousse l'image Docker vers Docker Hub. 
