--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,8 @@ jobs:
             - run: 
                 name: build Docker image
                 command: |
-                    echo $DOCKER_PASSWORD
-                    docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+                    echo "$DOCKER_PASSWORD"
+                    docker login -u "$DOCKER_LOGIN" -p "$DOCKER_PASSWORD"
                     docker build -t oussamaabid82/lettings:latest .
                     docker push oussamaabid82/lettings:latest
             
@@ -49,7 +49,7 @@ jobs:
                 # Pousse l'image Docker vers Docker Hub. 
                 name: Push to Docker Hub
                 command: |
-                    docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+                    docker login -u "$DOCKER_LOGIN" -p "$DOCKER_PASSWORD"
                     docker tag oussamaabid82/lettings:latest oussamaabid82/letting:$CIRCLE_SHA1
                     docker push oussamaabid82/letting:$CIRCLE_SHA1
 
