--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
             - image: cimg/python:3.9.13
               auth:
                 username: $DOCKER_LOGIN
-                password: $DOCKER_PASSWORD
+                password: $DOCKER_PASSEWORD
         
         steps:
             - checkout
@@ -41,7 +41,7 @@ jobs:
                 name: build Docker image
                 command: |
                     echo "$DOCKER_PASSWORD"
-                    docker login -u "$DOCKER_LOGIN" -p "$DOCKER_PASSWORD"
+                    docker login -u "$DOCKER_LOGIN" -p "$DOCKER_PASSEWORD"
                     docker build -t oussamaabid82/lettings:latest .
                     docker push oussamaabid82/lettings:latest
             
@@ -49,7 +49,7 @@ jobs:
                 # Pousse l'image Docker vers Docker Hub. 
                 name: Push to Docker Hub
                 command: |
-                    docker login -u "$DOCKER_LOGIN" -p "$DOCKER_PASSWORD"
+                    docker login -u "$DOCKER_LOGIN" -p "$DOCKER_PASSEWORD"
                     docker tag oussamaabid82/lettings:latest oussamaabid82/letting:$CIRCLE_SHA1
                     docker push oussamaabid82/letting:$CIRCLE_SHA1
 
