--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,8 @@ jobs:
                 command: |
                     sudo curl https://cli-assets.heroku.com/install.sh | sh
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku auth:login
-                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
+                    docker login --username=_ --password=$(heroku auth:token) registry.heroku.com
+                    
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push web
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release web
 
