--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,8 @@ jobs:
                 name: Build and push Docker image to Heroku
                 command: |
                     sudo curl https://cli-assets.heroku.com/install.sh | sh
-                    docker login --username=_ --password=$(heroku auth:token) registry.heroku.com
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku auth:login
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login -i -u "$Email" -p "$Password"
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push web
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release web
 
