--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,8 @@ jobs:
                 name: Build and push Docker image to Heroku
                 command: |
                     sudo curl https://cli-assets.heroku.com/install.sh | sh
-                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku auth:login
-                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login -i
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku auth:login -i
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push web
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release web
 
