--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,8 +61,8 @@ jobs:
                 command: |
                     sudo curl https://cli-assets.heroku.com/install.sh | sh
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
-                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push web
-                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release web
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a $HEROKU_APP_NAME web
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a $HEROKU_APP_NAME web
 
 workflows:
     sample: 
