--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,13 @@ django-heroku==0.3.1
 entrypoints==0.3
 flake8==3.7.0
 gunicorn==20.1.0
+heroku==0.1.4
 idna==3.3
 iniconfig==1.1.1
 mccabe==0.6.1
 packaging==21.3
 pluggy==1.0.0
-psycopg2==2.9.3
-psycopg2-binary==2.9.3
+psycopg2==2.8.6
 py==1.11.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
@@ -25,10 +25,12 @@ pytest==7.1.2
 pytest-django==3.9.0
 python-dateutil==1.5
 pytz==2022.1
+pywinpty==2.0.5
 requests==2.28.0
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
+tzdata==2022.1
 urllib3==1.26.9
 websocket-client==1.3.2
 whitenoise==6.2.0
