--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ mccabe==0.6.1
 packaging==21.3
 pluggy==1.0.0
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
 py==1.11.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
