--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,19 +68,5 @@ workflows:
     sample: 
         jobs:
             - build-and-test
-
-            - image-docker:
-                requires:
-                    - build-and-test
-                filters:
-                    branches:
-                        only:
-                            - main
-
-            - deploy-heroku:
-                requires:
-                    - image-docker
-                filters:
-                    branches:
-                        only:
-                            - main
+            - image-docker
+            - deploy-heroku
