--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
         executor: python/default
         steps:
             - checkout
+            - python -m pip install --upgrade pip
             - python/install-packages:
                 pkg-manager: pip
 
