--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,11 @@ jobs:
             
             - run:
                 name: update pip
-                command: python -m pip install --upgrade pip
-                
+                command: |
+                    python -m pip install --upgrade pip
+                    pip install –upgrade wheel
+                    pip install –upgrade setuptools
+
             - python/install-packages:
                 pkg-manager: pip
 
