--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
                 name: update pip
                 command: |
                     python -m pip install --upgrade pip
-                    pip install –upgrade wheel
-                    pip install –upgrade setuptools
+                    pip install –-upgrade wheel
+                    pip install –-upgrade setuptools
 
             - python/install-packages:
                 pkg-manager: pip
