--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,9 +66,9 @@ jobs:
                 command: |
                     sudo curl https://cli-assets.heroku.com/install.sh | sh
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
-                    HEROKU_API_KEY=${HEROKU_TOKEN} heroku config:set DEBUG=0 -a ${HEROKU_APP_NAME}
-                    HEROKU_API_KEY=${HEROKU_TOKEN} heroku config:set PORT=8000 -a ${HEROKU_APP_NAME}
-                    HEROKU_API_KEY=${HEROKU_TOKEN} heroku config:set SECRET_KEY=${DJANGO_SECRET_KEY} -a ${HEROKU_APP_NAME}
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku config:set DEBUG=0 -a ${HEROKU_APP_NAME}
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku config:set PORT=8000 -a ${HEROKU_APP_NAME}
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku config:set SECRET_KEY=${DJANGO_SECRET_KEY} -a ${HEROKU_APP_NAME}
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a $HEROKU_APP_NAME web
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a $HEROKU_APP_NAME web
 
