--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ jobs:
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku config:set DEBUG=0 -a ${HEROKU_APP_NAME}
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku config:set PORT=8000 -a ${HEROKU_APP_NAME}
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku config:set SECRET_KEY=${DJANGO_SECRET_KEY} -a ${HEROKU_APP_NAME}
+                    HEROKU_API_KEY=${HEROKU_API_KEY} heroku config:set SENTRY_DSN=${SENTRY_DSN} -a ${HEROKU_APP_NAME}
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a $HEROKU_APP_NAME web
                     HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a $HEROKU_APP_NAME web
 
