--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pytest-django==3.9.0
 python-dateutil==1.5
 pytz==2022.1
 requests==2.28.0
+sentry-sdk==1.6.0
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
